--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   "author": "Graftikle",
   "license": "MIT",
   "dependencies": {
+    "@tailwindcss/cli": "^4.1.13",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^4.18.2",
-    "nodemailer": "^6.9.7"
+    "nodemailer": "^6.9.7",
+    "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
